Fixed my awkward scrolling break in mobile devices

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -242,7 +242,6 @@ body {
 
 .yazilar {
   width: 1000px;
-  height: 72vh;
   overflow-y: auto;
 }
 
